<resources>
    <string name="app_name">旅拍</string>
    <string name="photo_mei_hua">美化</string>
    <string name="pin_tu">拼图</string>
    <string name="camera">拍照</string>
    <string name="photo_compress">图片压缩</string>
    <string name="choice_picture">选择图片</string>
    <string name="compress_hint">图片已压缩至最低大小，点击‘保存’按钮保存</string>
    <string name="start_compress">开始压缩</string>
    <string name="no_choice_picture">未选择任何图片</string>
    <string name="picture_size">图片大小：</string>
    <string name="save">保存</string>
    <string name="save_hint">保存成功，请前往‘旅拍’文件夹查看！</string>
    <string name="picture_save_success">图片已保存，请前往文件夹查看！</string>
    <string name="user_hint">欢迎使用旅拍应用图片压缩功能\n\n点击保存后的图片存放在（旅拍）文件夹中\n\n保存后可前往文件管理查看！</string>
    <string name="second_compress">再次压缩</string>
    <string name="compress_loading">正在压缩...</string>
    <string name="saveing">正在保存...</string>
    <string name="change_camera_hint">摄像头切换失败，请重试！</string>
    <string name="picture_success_save">拍照成功！</string>
    <string name="chu_li_ing">正在处理中</string>
    <string name="my_album">我的图库</string>
    <string name="edit_picture">图片编辑</string>
    <string name="save_picture">保存图片</string>
    <string name="tie_zhi">贴纸</string>
    <string name="lv_jing">滤镜</string>
    <string name="biao_qian">标签</string>
    <string name="cancel">取消</string>
    <string name="please_input_content">输入内容</string>
    <string name="please_input_contents">请输入内容</string>
    <string name="input_limit_hint">输入的字数已达上限</string>
    <string name="_10_10_10">你还可以输入15个字（15/15）</string>
    <string name="please_input_content_after">请先输入内容</string>
    <string name="edit">编 辑</string>

    <string name="active_success">激活引擎成功</string>
    <string name="already_activated">引擎已激活，无需再次激活</string>
    <string name="active_failed">引擎激活失败，错误码为 %d</string>
</resources>
